Better error message for frequent "cannot find index to verify join fields are unique"

XMLWordPrintableJSON

    • Atlas Streams
    • Fully Compatible
    • Sprint 63
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      A frequent error message in prod is: "cannot find index to verify join fields are unique"

      This occurs when a user specifies a $merge.on. We should make the error message better.

            Assignee:
            Guy-Jacques Isombe
            Reporter:
            Matthew Normyle
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

              Created:
              Updated:
              Resolved: