SERVER-97172: Better error message for frequent "cannot find index to verify join fields are unique" (#29661)

Summary:

- We now catch the generic error returned from
`MongoDBProcessInterface::ensureFieldsUniqueOrResolveDocumentKey` and
add context to it. The resulting error message is "Error occured while
validating $merge.on :: caused by :: Cannot find index to verify that
join fields will be unique"